# mxnet_so_issue

./: CMakeLists.txt  README.md
test/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
test_nomxnet/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
